--- a/BaiTap/app/src/main/res/values/strings.xml
+++ b/BaiTap/app/src/main/res/values/strings.xml
@@ -1,10 +1,4 @@
 <resources>
     <string name="app_name">BaiTap</string>
-
-    <string-array name="sizeClothes">
-        <item>S</item>
-        <item>M</item>
-        <item>L</item>
-        <item>XL</item>
-    </string-array>
+    <string name="action_search">Search</string>
 </resources>
